--- a/contributors/contributor-app/Dockerfile
+++ b/contributors/contributor-app/Dockerfile
@@ -1,4 +1,4 @@
 FROM nginx:alpine
 COPY nginx.conf /etc/nginx/nginx.conf
-COPY index.html /usr/share/nginx/html/index.html
+COPY . /usr/share/nginx/html/contributor-app
 EXPOSE 80
