--- a/contributors/contributor-app/nginx.conf
+++ b/contributors/contributor-app/nginx.conf
@@ -2,7 +2,7 @@ events {}
 http {
     server {
         listen 80;
-        root /usr/share/nginx/html;
+        root /usr/share/nginx/html/contributor-app;
         index index.html;
 
         location /stub_status {
