Revert "fix: Correct remote_write, load generator, and onboarding script"
This reverts commit 01aab450507ed5cd9d15d5b548c64b91f58d6b1b.

--- a/load-generator/Dockerfile
+++ b/load-generator/Dockerfile
@@ -8,4 +8,4 @@ COPY stress_test.py .
 RUN pip install requests
 RUN pip install python-dotenv
 
-CMD ["python", "load_test.py"]
+CMD ["python", "load_test.py", "http://url-anvil", "10"]
