feat: Implement local tracking service and app, and update documentation

--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,18 @@
 # and managed securely (e.g., Kubernetes Secrets, GCP Secret Manager).
 # For local development, these defaults are provided for convenience.
 
+# ---------------------------
+# Cloud / Competition API Keys
+# ---------------------------
+API_KEY=your_cloud_api_key
+INFLUENCER_USER=your_influencer_username
+
+# ---------------------------
+# Local Tracker (Offline) Keys
+# ---------------------------
+LOCAL_TRACKER_API_KEY=local_dev_key
+LOCAL_TRACKER_USER_ID=local_dev_user
+
 # PostgreSQL Database
 POSTGRES_DB=sre_challenge_db
 POSTGRES_USER=user
@@ -15,3 +27,8 @@ PGADMIN_DEFAULT_PASSWORD=your_pgadmin_password_here
 
 # Backend URL for Python scripts
 BACKEND_URL=http://localhost:3001
+
+# Local PostgreSQL Database (for local-tracker-service)
+LOCAL_POSTGRES_DB=local_sre_challenge_db
+LOCAL_POSTGRES_USER=local_user
+LOCAL_POSTGRES_PASSWORD=local_password
