--- a/local-tracker-service/package.json
+++ b/local-tracker-service/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "dotenv": "^16.0.0",
     "express": "^4.18.2",
+    "git-rev-sync": "^3.0.2",
     "pg": "^8.11.3"
   }
 }
