--- a/prometheus/prometheus.yml
+++ b/prometheus/prometheus.yml
@@ -4,9 +4,9 @@ global:
 
 # A list of scrape configurations.
 scrape_configs:
-  - job_name: 'prometheus'
-    static_configs:
-      - targets: ['localhost:9090']
+#  - job_name: 'prometheus'
+#    static_configs:
+#      - targets: ['localhost:9090']
 
   - job_name: 'url-anvil'
     static_configs:
